Changes done to the Interval Arithmetic package.

Version 4.117 on ?? August 2001
- VC++ workaround when using Filtered_exact in the Static_filters.

Version 4.116 on 27 August 2001
- Kernel_checker allows non-copyable predicates (ie works with Static_filters).
- operator<<(Lazy_exact_nt) uses to_double().

Version 4.115 on 16 August 2001
- New class Profile_counter.
- Use it in the filtered predicates.
- New traits class wrapper : Static_filters<>.
- Try another workaround for sqrt() on VC++ using _asm.  If it works, then
  we will be able to get rid of some painful stuff in the installation.

========================== CGAL 2.3 =======================

Version 4.114 on 1 August 2001
- Add missing operators in Lazy_exact_nt.

Version 4.113 on 25 July 2001
- Use Filtered_kernel instead of Filtered_exact in test/Kernel_checker.C .

Version 4.112 on 23 July 2001
- Remove macro test that prevented libCGAL building on VC++.

Version 4.111 on 19 July 2001
- Rename Filter_predicate to Filtered_predicate.

Version 4.110 on 19 July 2001
- Filetered_kernel now has Simple_cartesian<MP_Float> as default value for the
  exact kernel parameter.

Version 4.109 on 17 July 2001
- Test Lazy_exact_nt more throughly using Delaunay_3.

Version 4.108 on 17 July 2001
- Remove debug messages from Lazy_exact_nt.

Version 4.107 on 16 July 2001
- Don't test exact square roots without LEDA...
- VC++ Fix for Kernel_checker test program.
- Add a check that CGAL_IA_CT is defined for VC++.
- Document the risks with VC++, and advertise Filtered_kernel.
- Don't test abs(Filtered_exact) for VC++.

Version 4.106 on 12 July 2001
- Test-suite tweeks.

Version 4.105 on 9 July 2001
- __FUNCTION__ was not portable at all.

Version 4.104 on 4 July 2001
- Kernel_checker : prints __FUNCTION__ or __PRETTY_FUNCTION__ to get more
  information about which predicate it is.

Version 4.103 on 4 July 2001
- VC++ 7 warning.

Version 4.102 on 26 June 2001
- Doc update.

Version 4.101 on 22 June 2001